food-request-api/deploy/api/food-request-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-request-api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: food-request-ksa
      containers:
        - name: food-request-api
          image: gcr.io/projeto-time-desconhecido/food-request-api:latest
          ports:
            - containerPort: 8080
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "instances=projeto-time-desconhecido:southamerica-east1:food-request=tcp:3306"
          securityContext:
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
