food-request-api/deploy/api/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: food-rquest-api-global-ip
    kubernetes.io/ingress.class: gce-multi-cluster
  labels:
    app: api
spec:
  backend:
    serviceName: api-service
    servicePort: 8080

---
